force-app/main/default/objects/Car_Service__c/Car_Service__c.object-meta.xml
<CustomObject>
    <label>Car Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>