force-app/main/default/objects/Car_Service__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field linking the service to the specific car.</description>
    <label>Car</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Car Services</relationshipLabel>
    <relationshipName>Car_Services</relationshipName>
    <type>Lookup</type>
</CustomField>